  timestamp feature (Linux default behavior), cap drop adjustment feature
  (Section 5.5 of RFC 8033), ECN (Section 5.1 of RFC 8033) and derandomization
  feature (Section 5.4 of RFC 8033).
- (traffic-control) Add support for L4S mode to CoDel and FqCoDel queue discs
- (tcp) Support for dynamic pacing in TCP.
- (wifi) Support for 6 GHz channels when using 802.11ax

Bugs fixed
----------
- (traffic-control) #225 - Do not mark packet twice within a CoDel queue
- (mesh) - Enable possible use with SpectrumWifiPhy
- (lte) #224 - The scheduled SendMeasurementReport() event doesn't cancel after link failure detection

Release 3.31
============

Availability
------------
This release is available from:
https://www.nsnam.org/release/ns-allinone-3.31.tar.bz2

Supported platforms
-------------------
This release is intended to work on systems with the following minimal
requirements (Note:  not all ns-3 features available on all systems):
- g++-4.9 or later
- Xcode 10.1 or later
- Python 3.5 or later

Starting with ns-3.30, Python 3 has been the only supported Python version,
and scripts default to Python 3 usage.

This release has been tested on the following systems:
- Fedora 32 with g++-10.1.1 and Python 3.8.3
- Fedora 32 with clang-10.0.0 and Python 3.8.3
- Fedora 29 with g++-8.3.1 and Python 3.7.5
- Ubuntu 20.04 with g++-9.3.0 and Python 3.8.2
- Ubuntu 18.04 with g++-7.5.0 and Python 3.6.9
- Ubuntu 16.04.6 with g++-5.4.0 and Python 3.5.2
- macOS 10.15.3 (Catalina) with Xcode 11.3
- macOS 10.13.6 (High Sierra) with Xcode 10.1

New user-visible features
-------------------------
- (antenna) Model for antenna arrays based on 3GPP model (part of Integration of the 3GPP TR 38.901 fast fading model)
- (buildings) Random walk mobility model that does not allow nodes to enter buildings
- (core) The CommandLine facility can now add the Usage message to the Doxygen for the program
- (internet) TCP DCTCP model